# ninja-cli-mcp

./: $GEMINI_MCP_CONFIG  .editorconfig  .gitignore  .mcp.json  .mcp.json.backup  .opencode.json  BUILD_TEST_RESULTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAEMON_STABILITY_FIX.md  EDITOR_INTEGRATION_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_REPORT.md  FORCE_UPDATE.sh  FULL_SYSTEM_FIX_REPORT.md  GEMINI_FIX_REPORT.md  GITHUB_SETUP_GUIDE.md  HTTP_SSE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_FIXES.md  INSTALL_GUIDE.md  INTERACTIVE_MODEL_SELECTOR.md  INVESTIGATION_2026-01-26.md  LICENSE  MIGRATION.md  MIGRATION_NOTE.md  MODEL_DEDUPLICATION_AND_CUSTOM_MODELS.md  MODERNIZATION_SUMMARY.md  NINJA_MCP_ROADMAP.md  OPENCODE_SETUP.md  PHASE1_IMPLEMENTATION_PLAN.md  PROXY_ARCHITECTURE.md  PYTHON_SETUP.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_v0.4.0.md  RESEARCH_FINDINGS.md  (+71 more)
.agent/: ARCHITECT.md  CONFIG_ARCHITECTURE_DESIGN.md  CONFIG_MIGRATOR_IMPLEMENTATION.md  CONFIG_REFACTOR_ANALYSIS.md  CREDENTIALS_IMPLEMENTATION.md  DYNAMIC_MODEL_SELECTOR_IMPLEMENTATION.md  FILE_DETECTION_INVESTIGATION.md  MIGRATION_GUIDE.md  OH_MY_OPENCODE_ANALYSIS.md  REFACTORING_PROGRESS.md  ROADMAP.md  STATUS.md  TIMEOUT_BUGS_ANALYSIS.md  TIMEOUT_FIX_DEPLOYMENT.md
.gemini/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_PROCESS.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml  question.yaml
.github/workflows/: ci.yml  release.yml  tests.yml  update-homebrew.yml
.session/: 2026-02-08_model-fix.md
claude-integration/: README.md
claude-integration/agents/: ninja-architect.md  ninja-reviewer.md
claude-integration/commands/: code.md  explore.md  research.md
claude-integration/hooks/: hooks.json
config/: mcp-modules.json
configs/: example_plan.json
data/builtin_prompts/: architect-review.yml  architecture-design.yml  bug-debugging.yml  code-review.yml  feature-implementation.yml
docs/: AIDER_INTEGRATION_COMPLETE.md  AUTOMATIC_SAFETY.md  CLAUDE_CODE_2026_INTEGRATION.md  CLAUDE_CONFIG_LOCATIONS.md  CLI_STRATEGIES.md  CODING_AGENT_CLI_OPTIONS.md  CONCURRENCY_ANALYSIS.md  CONFIGURATION.md  EDITOR_INTEGRATIONS.md  HOW_TO_RESTART.md  INSTALLATION_MODES.md  INSTALLER_GUIDE.md  INTEGRATION_TEST_RESULTS.md  LOG_LOCATION_CHANGE.md  MCP_ARCHITECTURE.md  MCP_BEST_PRACTICES.md  MCP_INSPECTOR_GUIDE.md  MODEL_SELECTION.md  OPENCODE_INTEGRATION.md  OPENCODE_INTEGRATION_PLAN.md  PACKAGING.md  POWER_CONFIGURATOR.md  PROMPTS_API.md  QUICK_START_AIDER.md  RATE_BALANCER.md  RESEARCHER.md  RESEARCHER_SPEC.md  RESOURCES_API.md  SAFE_USAGE.md  SECURITY_ANALYSIS.md  SEQUENTIAL_EXECUTION_ANALYSIS.md  TESTING_GUIDE.md  TUI_INSTALLER.md
docs/coder/: ARCHITECTURE.md  CHANGELOG.md  MIGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  REFACTORING_SUMMARY.md
docs/researcher/: CHANGELOG.md  README.md
docs/secretary/: README.md
examples/: README.md  claude-code-mcp.json  dynamic_model_selector_demo.py  hello_ninja.py  mcp-config-local-dev.json  mcp-config-template.json  opencode_integration_example.py  zed-settings.json
examples/workflows/: bug-debugger.yml  code-reviewer.yml  feature-developer.yml
ninja-prompts/: server.py
ninja-resources/: server.py
ninja_resources/: server.py  tools.py
notebooks/: .gitignore  01_model_comparison.ipynb  01_model_comparison.ipynb.bak  02_cost_analysis.ipynb  02_cost_analysis.ipynb.bak  03_mcp_token_savings_analysis.ipynb  03_plugin_cost_savings.ipynb  MODEL_SELECTION.md  QUICKSTART.md  README.md  livebench_data.py  test_livebench_data.py  test_minimal.ipynb
packaging/debian/: ninja-mcp_0.2.0_all.deb
packaging/homebrew/: ninja-mcp.rb
scripts/: clean_claude_env.sh  dev.sh  fix_config.sh  get_recommended_models.py  http_server.py  http_server_old.py  install.sh  install_claude_code_mcp.sh  install_coding_cli.sh  install_copilot_cli_mcp.sh  install_gemini_mcp.sh  install_ide_integrations.sh  install_interactive.sh  install_interactive.sh.bak  install_vscode_mcp.sh  install_zed_mcp.sh  ninja-cli-mcp.service  ninja-recover.sh  post-install.sh  restart_mcp.sh  run_daemon.sh  run_integration_tests.sh  run_notebooks.sh  run_server.sh  run_server_stdio.sh  run_stdio_proxy.sh  run_tests.sh  safe-ninja-task.sh  smoke_test.sh  socket_server.py  stdio_proxy.py  test_aider_integration.sh  test_copilot_mcp.sh  test_tui_installer.py  update_mcp_config.py  update_mcp_config.sh
scripts/legacy_archive/: README.md  install_coding_cli.sh  install_copilot_cli_mcp.sh  install_daemon.sh  install_gemini_mcp.sh  install_ide_integrations.sh  install_interactive.sh  install_opencode_mcp.sh
scripts/lib/: claude_config.sh
scripts/packaging/: build-deb.sh  build-homebrew.sh
specs/: CLAUDE_HOOKS_CLI_SPEC.md  SKILL_PACKAGING_SPEC.md
src/ninja_cli_mcp/: __init__.py  cli.py  logging_utils.py  models.py  (+7 more)
test_output/: EXECUTION_SUMMARY.txt  INDEX.md  QUICK_REFERENCE.md  START_HERE.md  SUMMARY.txt  TEST_REPORT.md  TEST_RESULTS.md  config_helper.py  math_helper.py  string_utils.py  test_combined.py  test_integration.py  test_utils.py  test_utils_module.py  test_validators_module.py  utils.py  validators.py  victory.py
tests/: README.md  __init__.py  conftest.py  test_activity_timeout.py  test_calculator.py  test_calculator_tests.py  test_cli_adapter.py  test_corruption_fix.py  test_driver.py  test_dynamic_model_selector.py  test_e2e.py  test_final_haiku.py  test_final_par2.py  test_final_seq.py  test_final_simple.py  test_hooks_cli.py  test_integration.py  test_integration_aider.py  test_integration_claude.py  test_integration_openrouter.py  test_logging_integration.py  test_mcp_timeout_integration.py  test_mcp_works.py  test_metrics.py  test_model_selector.py  test_models.py  test_multi_agent.py  test_ninja_fixed.py  test_parallel_strings.py  test_paths.py  test_prompt_builder.py  test_qwen_driver.py  test_real_ninja_integration.py  test_resources_server.py  test_result_parser.py  test_security.py  test_sequential_hanging_fix.py  test_server.py  test_sessions.py  test_smoke.py  (+8 more)
(+161 files in other folders)
