[project]
name = "ninja-mcp"
version = "0.7.3"
description = "Multi-module MCP server: Coder, Researcher, Secretary, Resources, Prompts"
authors = [{ name = "ninja-mcp contributors" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "ai", "coding", "research", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.1.2",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
    "anyio>=4.0.0",
    "ddgs>=9.10.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
    "aiohttp>=3.9.0",
    "InquirerPy>=0.3.4",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
coder = [
    "gitpython>=3.1.0",
]
researcher = [
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
]
secretary = [
    "fastapi>=0.23.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "pygments>=2.17.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]
all = [
    "ninja-mcp[coder,researcher,secretary,notebooks,dev]",
]

[project.scripts]
# MCP Servers
ninja-coder = "ninja_coder.server:run"
ninja-researcher = "ninja_researcher.server:run"
ninja-secretary = "ninja_secretary.server:run"
ninja-prompts = "ninja_prompts.server:run"

# Daemon and Config
ninja-daemon = "ninja_common.daemon:main"
ninja-config = "ninja_common.config_cli:main"

# Claude Code Hooks CLIs
ninja-coder-hooks = "ninja_coder.hooks_cli:main"
ninja-secretary-hooks = "ninja_secretary.hooks_cli:main"

# Skill Packaging
ninja-skill = "ninja_common.skill_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_common", "src/ninja_coder", "src/ninja_researcher", "src/ninja_secretary", "src/ninja_prompts", "src/ninja_config"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
exclude = ["tests/**/*.py", "notebooks/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR1714", # merge multiple comparisons
    "SIM102",  # nested if statements
    "SIM105",  # contextlib.suppress
    "SIM108",  # ternary operator
    "SIM117",  # nested with statements
    "SIM222",  # use true instead of ... or True
    "RUF015",  # prefer next(iter())
    "RUF001",  # ambiguous unicode characters
    "RUF012",  # mutable class attributes
    "PLW2901", # redefined-loop-name
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001", # unused function argument
    "S101",   # use of assert
    "PLR2004", # magic value comparison
]
"notebooks/**/*.py" = ["ALL"]
"notebooks/**/*.ipynb" = ["ALL"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
exclude = ["tests", "notebooks", "scripts"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "ninja_common.metrics",
    "ninja_common.security",
    "ninja_common.rate_balancer",
    "ninja_common.daemon",
    "ninja_common.config_cli",
    "ninja_common.structured_logger",
    "ninja_secretary.*",
    "ninja_researcher.server",
    "ninja_researcher.tools",
    "ninja_researcher.search_providers",
    "ninja_coder.server",
    "ninja_coder.driver",
    "ninja_coder.tools",
    "ninja_coder.safety",
    "ninja_coder.strategies.*",
    "ninja_coder.benchmark.*",
    "ninja_coder.daemon",
    "ninja_coder.model_selector",
    "ninja_prompts.*",
    "ninja_config.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "tree_sitter.*",
    "tavily.*",
    "duckduckgo_search.*",
    "starlette.*",
    "uvicorn.*",
    "psutil.*",
    "bs4.*",
    "markdownify.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require API keys)",
    "e2e: End-to-end tests (full system tests)",
    "slow: Slow tests (may take minutes)",
    "agent: Tests requiring AI agent CLI (aider, claude, etc)",
]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
